[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ndcourts-mcp"
version = "1.0.2"
description = "MCP server for North Dakota Supreme Court opinions (1889–present)"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "fastapi[standard]>=0.115",
    "platformdirs>=4.0",
]

[project.scripts]
ndcourts-mcp = "ndcourts_mcp.server:main"
ndcourts-ingest = "ndcourts_mcp.ingest:main"
ndcourts-web = "ndcourts_mcp.webapp:main"

[tool.setuptools.packages.find]
include = ["ndcourts_mcp*"]
