[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ndcourts-mcp"
version = "2.0.1"
description = "MCP server for North Dakota Supreme Court opinions (1889–present)"
requires-python = ">=3.12"
# Serve-only runtime. The prebuilt databases arrive as release assets; nothing
# here builds or validates the corpus (that happens in the private dev repo).
dependencies = [
    "fastmcp>=2.0",
    "platformdirs>=4.0",
]

[project.scripts]
ndcourts-mcp = "ndcourts_mcp.server:main"

[tool.setuptools.packages.find]
include = ["ndcourts_mcp*"]
